--- a/Ex1_ConstraintLayout/app/src/main/res/layout/activity_main.xml
+++ b/Ex1_ConstraintLayout/app/src/main/res/layout/activity_main.xml
@@ -11,25 +11,25 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="411dp"
+        android:layout_height="860dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="TextSizeCheck">
 
         <ImageView
             android:id="@+id/imageView3"
-            android:layout_width="0dp"
-            android:layout_height="231dp"
-            android:layout_marginStart="1dp"
-            android:layout_marginEnd="1dp"
+            android:layout_width="411dp"
+            android:layout_height="234dp"
+            android:layout_marginTop="6dp"
             android:contentDescription="@string/singapore_description"
             android:scaleType="centerCrop"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/barrier"
+            app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/singapore" />
 
         <ImageView
@@ -105,15 +105,17 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="211dp"
-            android:layout_marginBottom="209dp"
+            android:layout_marginBottom="180dp"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
             android:text="@string/singapore_description"
-            android:textSize="20sp"
+            android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView3" />
+            app:layout_constraintTop_toBottomOf="@+id/imageView3"
+            app:layout_constraintVertical_bias="0.448" />
 
         <androidx.constraintlayout.widget.Barrier
             android:id="@+id/barrier"
@@ -125,23 +127,24 @@
         <EditText
             android:id="@+id/editCamera_value"
             android:layout_width="214dp"
-            android:layout_height="0dp"
+            android:layout_height="60dp"
             android:ems="10"
             android:importantForAutofill="no"
             android:inputType="text"
             android:text="@string/camera_value"
             app:layout_constraintBottom_toTopOf="@+id/editCamera_settings"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.502"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/singapore"
-            app:layout_constraintVertical_bias="0.5" />
+            app:layout_constraintVertical_bias="0.0" />
 
         <EditText
             android:id="@+id/editCamera_settings"
             android:layout_width="0dp"
             android:layout_height="60dp"
             android:layout_marginEnd="98dp"
-            android:layout_marginBottom="39dp"
+            android:layout_marginBottom="64dp"
             android:ems="10"
             android:importantForAutofill="no"
             android:inputType="text"
