Cập nhật giao diện

--- a/Ex7_IntentLogin/app/src/main/res/layout/activity_home.xml
+++ b/Ex7_IntentLogin/app/src/main/res/layout/activity_home.xml
@@ -141,16 +141,16 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
-                android:layout_width="0dp"
+                android:id="@+id/imageView2"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:contentDescription="@string/avatar"
                 android:scaleType="centerCrop"
-                android:translationZ="10000dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:srcCompat="@tools:sample/backgrounds/scenic" />
+                app:srcCompat="@drawable/singapore" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
