--- a/Ex7_IntentLogin/app/src/main/res/layout/activity_main.xml
+++ b/Ex7_IntentLogin/app/src/main/res/layout/activity_main.xml
@@ -64,8 +64,8 @@
 
         <Button
             android:id="@+id/btnOK"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="194dp"
+            android:layout_height="96dp"
             android:backgroundTint="#2196F3"
             android:text="@string/dang_nhap"
             android:textSize="24sp"
