--- a/Ex5_AddSubMulDiv_Activiy_as_Listner/app/src/main/res/layout/activity_main.xml
+++ b/Ex5_AddSubMulDiv_Activiy_as_Listner/app/src/main/res/layout/activity_main.xml
@@ -87,6 +87,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:layout_weight="1"
+            android:onClick="onClick"
             android:text="@string/cong"
             android:textSize="20sp"
             android:textStyle="bold" />
@@ -97,6 +98,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:layout_weight="1"
+            android:onClick="onClick"
             android:text="@string/tru"
             android:textSize="20sp"
             android:textStyle="bold" />
@@ -107,6 +109,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:layout_weight="1"
+            android:onClick="onClick"
             android:text="@string/nhan"
             android:textSize="20sp"
             android:textStyle="bold" />
@@ -117,6 +120,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:layout_weight="1"
+            android:onClick="onClick"
             android:text="@string/chia"
             android:textSize="20sp"
             android:textStyle="bold" />
