--- a/Ex5_AddSubMulDiv_Var/app/src/main/res/layout/activity_main.xml
+++ b/Ex5_AddSubMulDiv_Var/app/src/main/res/layout/activity_main.xml
@@ -89,7 +89,7 @@
         android:layout_height="60dp"
         android:layout_marginEnd="32dp"
         android:background="#3F51B5"
-        android:text="/"
+        android:text="@string/chia"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/editText_ketQua"
         app:layout_constraintEnd_toEndOf="parent"
