Cập nhật tính năng

--- a/VD_Math/app/src/main/res/layout/activity_main.xml
+++ b/VD_Math/app/src/main/res/layout/activity_main.xml
@@ -194,6 +194,7 @@
             android:layout_width="65dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
+            android:background="@drawable/custom_edt"
             android:ems="10"
             android:enabled="true"
             android:gravity="center"
@@ -201,35 +202,39 @@
             android:inputType="text"
             android:textColor="@color/black"
             android:textSize="20sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.499" />
+            android:textStyle="bold"
+            app:layout_constraintBaseline_toBaselineOf="@+id/editText_NumB"
+            app:layout_constraintStart_toStartOf="parent" />
 
         <EditText
             android:id="@+id/editText_KetQua"
             android:layout_width="130dp"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
             android:layout_marginEnd="16dp"
+            android:background="@drawable/custom_edt"
             android:ems="10"
             android:enabled="true"
             android:gravity="center"
             android:hint="Kết Quả"
             android:inputType="text"
+            android:textColor="@color/black"
             android:textSize="20sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:textStyle="bold"
+            app:layout_constraintBaseline_toBaselineOf="@+id/editText_NumB"
+            app:layout_constraintEnd_toEndOf="parent" />
 
         <EditText
             android:id="@+id/editText_NumB"
             android:layout_width="65dp"
             android:layout_height="wrap_content"
+            android:background="@drawable/custom_edt"
             android:ems="10"
             android:gravity="center"
             android:hint="B"
             android:inputType="text"
+            android:textColor="@color/black"
             android:textSize="20sp"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.406"
@@ -243,6 +248,7 @@
             android:gravity="center"
             android:text="+"
             android:textSize="20sp"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/editText_NumB"
             app:layout_constraintStart_toEndOf="@+id/editText_NumA"
@@ -256,6 +262,7 @@
             android:gravity="center"
             android:text="="
             android:textSize="20sp"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/editText_KetQua"
             app:layout_constraintStart_toEndOf="@+id/editText_NumB"
