--- a/NavigationView/app/src/main/res/layout/fragment_search.xml
+++ b/NavigationView/app/src/main/res/layout/fragment_search.xml
@@ -2,18 +2,18 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/contentLayout"
+    android:id="@+id/fragment_search"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background_fragment_one"
+    android:background="#8BC34A"
     android:hapticFeedbackEnabled="false"
-    tools:context=".ContentFragment">
+    tools:context=".SearchFragment">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/fragment_one"
-        android:textColor="@color/white"
+        android:text="@string/search"
+        android:textColor="#0D47A1"
         android:textSize="34sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
