--- a/NavigationView/app/src/main/res/values/themes.xml
+++ b/NavigationView/app/src/main/res/values/themes.xml
@@ -3,6 +3,7 @@
     <style name="Base.Theme.NavigationView" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="colorSecondaryContainer">#009dd9</item>
     </style>
 
     <style name="Theme.NavigationView" parent="Base.Theme.NavigationView" />
