--- a/NavigationView/app/src/main/res/layout/fragment_home.xml
+++ b/NavigationView/app/src/main/res/layout/fragment_home.xml
@@ -2,17 +2,17 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/contentLayout"
+    android:id="@+id/fragment_home"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background_fragment_one"
+    android:background="#9C27B0"
     android:hapticFeedbackEnabled="false"
-    tools:context=".ContentFragment">
+    tools:context=".HomeFragment">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/fragment_one"
+        android:text="@string/home"
         android:textColor="@color/white"
         android:textSize="34sp"
         android:textStyle="bold"
